sonar adjusts II